Add styles, bulma framework

--- a/project/frontend/templates/frontend/index.html
+++ b/project/frontend/templates/frontend/index.html
@@ -9,11 +9,7 @@
 </head>
 
 <body>
-  <section class="section">
-    <div class="container">
-          <div id="app" class="columns"><!-- React --></div>
-    </div>
-  </section>
+  <div id="app"><!-- React --></div>
 </body>
 
 {% load static %}
