Webpack: add livereload

--- a/project/frontend/templates/frontend/index.html
+++ b/project/frontend/templates/frontend/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
-  <title>Django DRF - React : Quickstart - Valentino G. - www.valentinog.com</title>
+  <script src="http://localhost:35729/livereload.js"></script>
+  <title>Huu Thang: Facial Recognition</title>
 </head>
 
 <body>
