Add material dashboard

--- a/project/frontend/templates/frontend/index.html
+++ b/project/frontend/templates/frontend/index.html
@@ -4,8 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <script src="http://localhost:35729/livereload.js"></script>
   <title>Huu Thang: Facial Recognition</title>
+  <style>
+    body {
+      font-family: 'Lato', sans-serif;
+      font-size: 15px;
+    }
+  </style>
 </head>
 
 <body>
